# hello_world_cpp_cmake

./: CMakeLists.txt  LICENSE  README.md
